--- a/gb/20/3/25/n11973707.md
+++ b/gb/20/3/25/n11973707.md
@@ -1,14 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/avp264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/avp264/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/avp264/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/avp264/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/avp264/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/avp264/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/avp264/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/avp264/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/avp264/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/avp264/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/avp264/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/avp264/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/avp264/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>《天口》道人生 张三丰说五德五脏五行的关系</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2016/09/1609221218162669.jpg" />
-<h6>张三丰像。（公有领域）
-</h6>
+
+<h6></h6>
 <hr>
-<p>滚滚红尘，苦海滔滔。为了醒世化民，<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E5%BC%A0%E4%B8%89%E4%B8%B0.md#1">张三丰</a>给不同悟性、不同根基的众生，撰写了《<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E5%A4%A9%E5%8F%A3.md#1">天口</a>》，共计24篇，涉及<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E4%BA%94%E5%BE%B7.md#1">五德</a>、孝行、淫恶、爱人、敬神、医药、相卜等内容。他以《天口》道人生，为不同根基的人指点迷津，从中讲述做人之道，处世之道，殷切劝人重德行善，告诉人们吃亏是福，“吃尽亏时劫已除”等普世理念。</p>
-<p>在中共病毒肆虐全球之时，面对大疫反思当下，阅读<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E5%BC%A0%E4%B8%89%E4%B8%B0.md#1">张三丰</a>所述《<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E5%A4%A9%E5%8F%A3.md#1">天口</a>篇》之“<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E4%BA%94%E5%BE%B7.md#1">五德</a>”，不禁让笔者反思，如果人们能了解德对人体的影响，或许能避免许多灾难的发生。</p>
-<p>张三丰说，人生有五德“仁义礼智信”，他将此譬喻为天地的<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E4%BA%94%E8%A1%8C.md#1">五行</a>“木金火水土”以及与人身的“肝肺心肾脾”五方面的经脉相联系。也就是：</p>
+<p>滚滚红尘，苦海滔滔。为了醒世化民，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%BC%A0%E4%B8%89%E4%B8%B0.md#1">张三丰</a>给不同悟性、不同根基的众生，撰写了《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%A9%E5%8F%A3.md#1">天口</a>》，共计24篇，涉及<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%94%E5%BE%B7.md#1">五德</a>、孝行、淫恶、爱人、敬神、医药、相卜等内容。他以《天口》道人生，为不同根基的人指点迷津，从中讲述做人之道，处世之道，殷切劝人重德行善，告诉人们吃亏是福，“吃尽亏时劫已除”等普世理念。</p>
+<p>在中共病毒肆虐全球之时，面对大疫反思当下，阅读<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%BC%A0%E4%B8%89%E4%B8%B0.md#1">张三丰</a>所述《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%A9%E5%8F%A3.md#1">天口</a>篇》之“<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%94%E5%BE%B7.md#1">五德</a>”，不禁让笔者反思，如果人们能了解德对人体的影响，或许能避免许多灾难的发生。</p>
+<p>张三丰说，人生有五德“仁义礼智信”，他将此譬喻为天地的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%94%E8%A1%8C.md#1">五行</a>“木金火水土”以及与人身的“肝肺心肾脾”五方面的经脉相联系。也就是：</p>
 <p><strong>仁—木—肝</strong><br />
 <strong> 义—金—肺</strong><br />
 <strong> 礼—火—心</strong><br />
@@ -16,7 +15,7 @@
 <strong> 信—土—脾</strong></p>
 <p><span style="color: #008080;"><strong>1. 仁?肝?木</strong></span></p>
 <p><span style="color: #008080;"><em>“人皆曰木不可少也，而何以无仁也，心无仁者必无养育之念，其肝已绝，而木为之槁枯。”——张三丰《五德》</em></span></p>
-<p>人们都说，生活中不能缺少“木”，为什么却把“仁”丢失了呢？心中没有仁德，他必然没有养育之念，对外不能爱护他人，对内不能养护自己。久而久之，他的肝脏功能就会衰竭，而<ahref="https://github.com/avp264/djy/blob/master/gb/tag/%E4%BA%94%E8%A1%8C.md#1">五行</a>属性的“木”也为之枯死。</p>
+<p>人们都说，生活中不能缺少“木”，为什么却把“仁”丢失了呢？心中没有仁德，他必然没有养育之念，对外不能爱护他人，对内不能养护自己。久而久之，他的肝脏功能就会衰竭，而<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%94%E8%A1%8C.md#1">五行</a>属性的“木”也为之枯死。</p>
 <p>《礼记正义》卷二十一认为“取仁于祢（音nǐ，奉祀亡父的宗庙），取义于祖”，仁出自于先父，义出自于先祖。就像桃仁、杏仁一样，有了“仁”（种子）的根本，就能长成树木，就能够开花结果，一代代繁衍不息。古人从“祢”取“仁”，认为仁有养育之德。</p>
 <p><span style="color: #008080;"><strong>2. 义?肺?金</strong></span><br />
 <em><span style="color: #008080;">“人皆曰金不可少也，而何以无义也，无义者必无权宜之思，其肺已绝，而金为之朽钝矣。”——张三丰《五德》</span></em></p>
@@ -35,56 +34,55 @@
 <p><span style="color: #008080;"><em>“人皆曰土不可少也，而何以无信也，无信者必无交孚之情，其脾已绝，而土为之分崩也。”——张三丰《五德》</em></span></p>
 <p>人们都说，生活中不可缺少“土”，但又为何而无信呢？当人的德性缺失了“信”，与人交往必然缺少诚信。久而久之，脾脏功能也会衰竭。他的五行之“土”也会分崩离析。</p>
 <p>东西方传说中，神仿照自己的形象，用泥土造了人。而土也能承载万事万物，育养万物。人世有春夏秋冬，阳生阴育，所有的运行机制，有条不紊地进行着。呈现在自然界，当生则生，当长则长，当收则收，当藏则藏。二十四节气，彼此交迭更替，就像时钟报时，准时为“信”，调养万物为“用”。这就是“土”的信用。</p>
-<p>五行之“土”对应脾脏，主身体机能运化和生养，对应到人的品行就是“信”，言而有信，作事讲诚信。反之，则无信。人没有信，也就难以立足，生意也很难做的长远。</p>
+<p>五行之“土”对应脾脏，主身体机能运化和生养，对应到人的品行就是“信”，言而有信，作事讲诚信。反之，人没有信，也就难以立足，生意也很难做的长远。</p>
 <p>（据张三丰《天口篇·五德篇》）＠＊#</p>
-<p>责任编辑：王愉悦</p>
+<p>责任编辑：王愉悦◇</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/16/9/24/n8334129.md#1">【千古英雄人物】张三丰(4) 大道真机</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/18/2/12/n10138128.md#1">张三丰的两个预言都兑现了</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/18/2/12/n10138178.md#1">得张三丰真传 沈万三苦炼金丹圆满飞升</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/19/2/22/n11063642.md#1">梦中受传技艺 三个真实案例</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/3/13/n11938424.md#1">强大善能量 猛兽蝗虫神奇证验</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/3/27/n11979695.md#1">古今记载里的“另外时空”（二）</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/3/26/n11976729.md#1">孝的理念和传说</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/3/26/n11976602.md#1">神韵是以中国古典舞为主要表现形式</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/3/24/n11969439.md#1">中国古代的“飞天”舞蹈家</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/3/23/n11966669.md#1">艺术因信仰与道德而荣耀（一）</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/9/24/n8334129.md#1">【千古英雄人物】张三丰(4) 大道真机</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/2/12/n10138128.md#1">张三丰的两个预言都兑现了</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/2/12/n10138178.md#1">得张三丰真传 沈万三苦炼金丹圆满飞升</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/2/22/n11063642.md#1">梦中受传技艺 三个真实案例</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/1/n13724549.md#1">中国第一套现代小学堂汉字教科书 对照中共“文字改革”的祸心</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738652.md#1">惠虎宇：500年风云变幻 俄罗斯帝国荣光不再</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/14/n13711418.md#1">【人生之钥】七十两银子换来一家性命</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13727306.md#1">惠虎宇：俄乌恩怨 千年探源</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/2/n13725250.md#1">楚一丁：五四的困惑</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/28/n13722121.md#1">【人生小品】心念转天地宽  作无品官行有品事</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/9/n11925917.md#1" target="_blank">掸封尘：毛泽东和江青有一个共同嗜好</a></li><li><a href="https://github.com/avp264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/1/n11994730.md#1">“中美相敬” 一个蒋中正逝世八年后才被宋美龄知道的秘密</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/1/n11994253.md#1">【命理】当我们算到自己的命不好时怎么办？</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/6/n12008426.md#1">两个现代人从地府带回来的信息</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/5/n12005125.md#1">神通第一的目犍连看不清的因果</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12017912.md#1">【新闻看点】川普为何批世卫？中共四大谎言</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12017902.md#1">【纪元播报】湖北江西混战 习外防暴乱内防政变</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12017486.md#1">【直播】4.9纽约州疫情发布会 确诊15万</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12013466.md#1">台染疫男童的9接触者有症状 部分检验结果出炉</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12014864.md#1">【靖远快评】冰岛病例藏信息 疫情将改变世界</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12014860.md#1">如何处理任志强 专家：习近平当局倍感棘手</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12017835.md#1">众艺人呛谭德塞抹黑台湾 炎亚纶：闭上你的嘴</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12015123.md#1">妻预先考虑后事 汤姆·汉克斯被要求做两件事</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12015926.md#1">胡瓜长年捐款做公益 不忘赞助辛龙女儿学费</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12013342.md#1">【美食天堂】一杯水就可以种葱～轻松收成</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/9/n12018209.md#1">老中医荐1茶饮防中共肺炎 治后遗症也有方法</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/8/n12015416.md#1">口罩何时必须丢弃？电锅蒸口罩4大问一次看懂</a></li>
-<li><a href="https://github.com/avp264/djy/blob/master/gb/20/4/7/n12012150.md#1">酒精加中药消毒更持久？美中医5招防病毒入侵</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740247.md#1">【新闻看点】上海被爆加强封控 居委弄虚作假</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/avp264/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/avp264/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/25/n11973707.htm">《天口》道人生 张三丰说五德五脏五行的关系</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/25/n11973707.htm">《天口》道人生 张三丰说五德五脏五行的关系</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/avp264/djy/blob/master/gb/20/3/25/n11973707.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/avp264/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/avp264/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/avp264/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/avp264/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/avp264/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/20/3/25/n11973707.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
